--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<span class="company"><span class="company-name">Accennovate Tech Solutions</span> (Feb 2023 - Current)</span>
 								</div>
 								<div class="timeline-body">
-									<p>Designed and developed a robust CMS website, empowering staff with user-friendly content management capabilities for streamlined updates and enhanced productivity.</p>
+									<p>Developed role-based CMS website, streamlined workflows reducing inefficiencies by 80%, provided training and support, tested and deployed enhancements, and documented project aspects comprehensively</p>
 								</div>
 							</div>
 						</li>
@@ -142,7 +142,7 @@
 									<span class="company"><span class="company-name">Tata Consultancy Services</span> (Jun 2021 - Feb 2023)</span>
 								</div>
 								<div class="timeline-body">
-									<p>Contributed to a critical Mainframe project (BFSI), providing efficient technical support and collaborating with cross-functional teams to ensure efficient system operations and optimal performance.</p>
+									<p>Handled incident resolution, maintained frontend code, crafted comprehensive documentation, and coordinated cross-team efforts for seamless project execution and support</p>
 								</div>
 							</div>
 						</li>
@@ -646,11 +646,11 @@
 					<!-- Explore More:  -->
 					<div class="row">
 						<div class="col-sm-12 col-md-6" style="display: flex;padding-bottom: 20px;">
-							<span style="background-color: #FF9000;
+							<!-- <span style="background-color: #FF9000;
 							margin-right: 20px;
 							padding: 5px 7px 7px 7px;
 							border-radius: 4px;
-							color: azure;">Connect</span>
+							color: azure;">Connect</span> -->
 							<ul class="fh5co-social-icons" style="padding-top: 10px;">
 								<li><a href="https://twitter.com/MahodarM" target="_blank"><i class="icon-twitter2"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/mahodar-majgaonkar-873811193/" target="_blank"><i class="icon-linkedin2"></i></a></li>
