Added README, updated Medium Artciles section

--- a/index.html
+++ b/index.html
@@ -86,11 +86,6 @@
 						<img class="profile" height="465" src="images/main-photo-2.jpg" alt="">
 						<img class="profile" height="465" src="images/new-final.png" alt="" id="top-image">
 					</ul>
-						<!-- <li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li> -->
 				</div>
 				<div class="col-md-8" style="position: relative;">
 					<h2>नमस्ते!</h2>
@@ -199,18 +194,6 @@
 								</div>
 							</div>
 						</li>
-						<!-- <li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li> -->
 			    	</ul>
 				</div>
 			</div>
@@ -511,23 +494,23 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Medium</h2>
-					<p id="mediumTitle">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<!-- <p id="mediumTitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius voluptate placeat rerum reprehenderit, dolores ea enim corporis similique libero sint error impedit temporibus odio magnam sapiente, debitis minima nam ex.</p> -->
 				</div>
 			</div>
 			<div id="allMediumPosts" class="row">
 				<div id="blog_1" class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(https://miro.medium.com/v2/resize:fit:1100/format:webp/1*UqOgoSsn8VHpIo52TOqw9Q.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a class="blog-title" href="#">Photoshoot On The Street</a></h3>
-							<p class="blog-description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">June 05, 2023</span>
+							<h3><a class="blog-title" href="#">The Dark Shadow of Carbon Footprint</a></h3>
+							<p class="blog-description">I walked down the street, my eyes scanning the array of man-made objects that surrounded me.</p>
 							<ul class="stuff">
 								<li>
 									<img style="position: relative;top: -4px;left: 4px;" src="images/clapping.png" alt="" width="17" height="17">
 									1</li>
-								<li><i class="icon-eye2"></i>34</li>
-								<li><a class="link" href="#" target="_blank">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-eye2"></i>38</li>
+								<li><a class="link" href="https://medium.com/@mahodar.majgaonkar/the-dark-shadow-of-carbon-footprint-9129cc5112e0" target="_blank">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
